--- a/index.html
+++ b/index.html
@@ -47,9 +47,13 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Your name</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="#" target="_blank">Chantel Morris</a>
+          and is
+          <a href="https://github.com/chantel44/my-weather-app" target="_blank">
+            on GitHub</a
+          >
+          and
+          <a href="https://www.vercel.com" target="_blank">hosted on Vercel</a>
         </p>
       </footer>
     </div>
