--- a/index.html
+++ b/index.html
@@ -47,13 +47,15 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Chantel Morris</a>
+          <a href="https://github.com/" target="_blank">Chantel Morris</a>
           and is
           <a href="https://github.com/chantel44/my-weather-app" target="_blank">
             on GitHub</a
           >
           and
-          <a href="https://www.vercel.com" target="_blank">hosted on Vercel</a>
+          <a href="https://my-weather-app-seven-nu.vercel.app/" target="_blank"
+            >hosted on Vercel</a
+          >
         </p>
       </footer>
     </div>
